# loom

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  INSTALL.md  README.md  pyproject.toml  wave.md
.claude/agents/: architect.md  developer.md  gitter.md  planner.md  qa.md
.claude/commands/: bm.md  build.md  ca.md  council.md  dev.md  git.md  jc.md  jm.md  professor.md  qa.md  wave.md
.claude/scripts/: alloc-ports.sh  dev.sh  worktree.sh
.claude/skills/360/: LICENSE  README.md  SKILL.md
.claude/skills/rnd/: SKILL.md
.claude/skills/rr/: README.md  SKILL.md
.codex/: README.md  config.toml
.codex/agents/: architect.toml  bm.toml  build.toml  ca.toml  council.toml  dev.toml  developer.toml  git.toml  gitter.toml  jc.toml  jm.toml  planner.toml  professor.toml  qa-agent.toml  qa.toml  wave.toml
.codex/skills/: 360  rnd  rr
.codex/skills/bm/: SKILL.md
.codex/skills/ca/: SKILL.md
.codex/skills/council/: SKILL.md
.codex/skills/dev/: SKILL.md
.codex/skills/git/: SKILL.md
.codex/skills/jc/: SKILL.md
.codex/skills/jm/: SKILL.md
.codex/skills/professor/: SKILL.md
.codex/skills/qa/: SKILL.md
.codex/skills/wave/: SKILL.md
.github/workflows/: release.yml  security.yml
crates/loom-core/: Cargo.toml
crates/loom-core/src/: config.rs  embedder.rs  error.rs  git_analyzer.rs  graph.rs  jina_bert.rs  lib.rs  models.rs  watcher.rs
crates/loom-core/src/indexer/: mod.rs  path.rs  pipeline.rs  resolver.rs  walk.rs
crates/loom-core/src/parsers/: csharp.rs  go.rs  java.rs  javascript.rs  mod.rs  parser.rs  python.rs  registry.rs  rust.rs  signals.rs  tree_sitter_utils.rs
crates/loom-core/src/search/: engine.rs  mod.rs  scoring.rs
crates/loom-core/src/store/: migrations.rs  mod.rs  vector.rs
crates/loom-core/tests/: embedder.rs  foundation.rs  git_analyzer.rs  indexer_pipeline.rs  parsers.rs  qa_rust_foundation.rs  runtime_authority.rs  search.rs  test_qa_rust_indexer.rs  test_qa_rust_parsers.rs  watcher.rs
crates/loom-mcp/: Cargo.toml
crates/loom-mcp/src/: main.rs  server.rs
docs/commands/ca/research/: audit-2026-05-11-lang-adapters.md
docs/dev/: runtime-contract.md
docs/dev/research/: db-and-model-alternatives-2026-05-11.md  rust-techniques-2026-05-11.md
docs/dev/tasks/adapter-arch/: 5-dev-report.md  7-post-merge-qa.md
docs/dev/tasks/archive/adapter-arch/: 6-bugs.md  8-audit.md
docs/dev/tasks/archive/foundation-data-model/: 3-architecture.md  5-dev-report.md  6-bugs.md  7-post-merge-qa.md  ports.md
docs/dev/tasks/archive/graph-and-scoring/: 0-task.md  5-dev-report.md  ABANDONED.md
docs/dev/tasks/archive/lang-adapters/: 1-plan.md  3-architecture.md  5-dev-report.md  8-audit.md
docs/dev/tasks/competitor-dominance-cli/: 0-task.md
docs/dev/tasks/corepack-benchmark-gate/: 0-task.md
docs/dev/tasks/corepack-head-to-head-run/: 0-task.md
docs/dev/tasks/evolutionary-coupling/: 0-task.md  1-plan.md  3-architecture.md  5-dev-report.md  6-bugs.md  ports.md
docs/dev/tasks/foundation-data-model/: 0-task.md  1-plan.md  8-audit.md
docs/dev/tasks/graph-and-scoring/: 1-plan.md  3-architecture.md  6-bugs.md  ports.md
docs/dev/tasks/lang-adapters/: 0-task.md  6-bugs.md  7-post-merge-qa.md
docs/dev/tasks/ranking-trust-regressions/: 0-task.md
docs/dev/tasks/relatable-index-signals/: 0-task.md  1-plan.md  3-architecture.md
docs/dev/tasks/rust-foundation/: 0-task.md  5-dev-report.md
docs/dev/tasks/rust-indexer/: 0-task.md  5-dev-report.md
docs/dev/tasks/rust-parsers/: 5-dev-report.md  6-bugs.md
docs/dev/tasks/rust-productization/: 0-task.md  1-plan.md  3-architecture.md
docs/dev/tasks/rust-runtime-authority/: 0-task.md  1-plan.md  3-architecture.md  5-dev-report.md  6-bugs.md  7-post-merge-qa.md  8-audit.md
docs/dev/tasks/rust-runtime-retrieval-fixes/: 0-task.md  1-plan.md  3-architecture.md  5-dev-report.md  6-bugs.md  7-post-merge-qa.md  8-audit.md
docs/dev/tasks/search-contract-foundation/: 0-task.md  1-plan.md  3-architecture.md  5-dev-report.md  6-bugs.md  7-post-merge-qa.md  8-audit.md
docs/dev/tasks/search-inspect-evidence/: 0-task.md  1-plan.md  3-architecture.md  5-dev-report.md  6-bugs.md  7-post-merge-qa.md  8-audit.md
docs/dev/tasks/semantic-embedder-authority/: 0-task.md  1-plan.md  3-architecture.md  5-dev-report.md  6-bugs.md  7-post-merge-qa.md  8-audit.md
docs/dev/tasks/state-flow-neighborhoods/: 0-task.md
docs/dev/tasks/super-upgrade-retrieval/: 0-task.md
docs/dev/waves/foundation-rebuild/: report.md
docs/dev/waves/multi-lang-adapters/: report.md
docs/dev/waves/semantic-proof-gate/: report.md  wave.md
docs/dev/waves/super-upgrade/: report.md  wave.md
sample/: DOGFOOD-REPORT.md  package.json
sample/src/: config.js  database.js  errors.js  index.js
sample/src/auth/: auth.js  middleware.js  session.js
sample/src/models/: order.js  product.js  user.js
sample/src/routes/: api.js
sample/src/services/: analytics.js  cart.js  discount.js  inventory.js  notification.js  payment.js  pricing.js  wishlist.js
sample/src/utils/: logger.js  validator.js
src/loom/: __init__.py  __main__.py  config.py  server.py
src/loom/indexer/: embedder.py  git_analyzer.py  parser.py  pipeline.py  watcher.py
src/loom/indexer/adapters/: __init__.py  base.py  csharp.py  go.py  java.py  javascript.py  python.py  rust.py
src/loom/search/: engine.py  scoring.py
src/loom/store/: db.py  graph.py  models.py
tests/: conftest.py  test_db.py  test_embedder.py  test_engine.py  test_engine_with_graph.py  test_git_analyzer.py  test_graph.py  test_lang_adapters.py  test_parser.py  test_pipeline.py  test_qa_adapter_arch.py  test_qa_bug001_recheck.py  test_qa_evolutionary_coupling.py  test_qa_foundation_data_model.py  test_qa_graph_and_scoring.py  test_qa_lang_adapters.py  test_qa_post_merge_fdm.py  test_scoring.py  test_server.py  test_watcher.py
tmp/competitors/: loom-competitors-aggregate-2026-05-11.md
tmp/competitors/_agent-findings/: canonical-code-search.md  graph-code-intelligence.md  lsp-agent-workflow.md  octocode.md  static-analysis-tree-sitter.md  vector-hybrid-search.md
(+25 files in other folders)
