[project]
name = "loom-mcp"
version = "0.1.0"
description = "Contextual code co-occurrence engine — search for A, find what you need"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Reza", email = "mrez9090@gmail.com" },
]
keywords = ["mcp", "code-search", "semantic-search", "ast", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0",
    "tree-sitter>=0.24",
    "tree-sitter-languages>=1.10",
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1",
    "networkx>=3.4",
    "watchdog>=6.0",
    "blake3>=1.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
loom = "loom.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "PT", "RET", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
