[project]
name = "loom-mcp"
version = "0.1.0"
description = "Contextual code co-occurrence engine — search for A, find what you need"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Reza", email = "mrez9090@gmail.com" },
]
keywords = ["mcp", "code-search", "semantic-search", "ast", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0",
    "tree-sitter>=0.24",
    "tree-sitter-javascript>=0.23",
    "sqlite-vec>=0.1",
    "watchdog>=4.0",
    "fastembed>=0.4",
    "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
loom = "loom.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "PT", "RET", "SIM"]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["sqlite_vec", "fastembed", "watchdog.*", "networkx"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=loom --cov-fail-under=85"

[tool.coverage.run]
source = ["loom"]
omit = ["src/loom/__main__.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
