[package]
name = "loom-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
parking_lot = "0.12"
petgraph = { version = "0.8", features = ["stable_graph", "matrix_graph"] }
r2d2 = "0.8"
r2d2_sqlite = "0.34"
rusqlite = { version = "0.39", features = ["bundled", "functions", "load_extension"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9"
tracing = "0.1"
tree-sitter = "0.25"
tree-sitter-c-sharp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
