[package]
name = "loom-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
loom-core = { path = "../loom-core" }
rmcp = { version = "1.6", default-features = false, features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
